@@ -317,6 +317,7 @@ Doug Fort
 John Fouhy
 Stefan Franke
 Martin Franklin
+Bruce Frederiksen
 Robin Friedrich
 Bradley Froehle
 Ivan Frohne
